# RoWifi-V3

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  crowdin.yml
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: lints.yml  main.yml
attributes/: Cargo.toml
attributes/src/: lib.rs
cache/: Cargo.toml  README.md
cache/src/: event.rs  lib.rs
cache/src/models/: channel.rs  guild.rs  member.rs  mod.rs  role.rs
database/: Cargo.toml
database/src/: error.rs  lib.rs
database_new/: Cargo.toml
database_new/src/: error.rs  lib.rs
framework/: Cargo.toml
framework/framework-derive/: Cargo.toml
framework/framework-derive/src/: lib.rs
framework/src/: arguments.rs  bucket.rs  command.rs  constants.rs  context.rs  error.rs  handler.rs  lib.rs  logger.rs  map.rs  parser.rs  prelude.rs  respond.rs  structures.rs  utils.rs
framework/src/extensions/: embed.rs  mod.rs  standby.rs
framework_new/: Cargo.toml
framework_new/framework-derive/: Cargo.toml
framework_new/framework-derive/src/: lib.rs
framework_new/src/: arguments.rs  bucket.rs  command.rs  context.rs  error.rs  handler.rs  lib.rs  parser.rs  prelude.rs  service.rs  utils.rs
images/: README.md
models/: Cargo.toml
models/src/: analytics.rs  blacklist.rs  events.rs  id.rs  lib.rs  stats.rs  user.rs
models/src/bind/: asset.rs  custom.rs  group.rs  mod.rs  rank.rs  template.rs
models/src/guild/: backup.rs  mod.rs  settings.rs  types.rs
models/src/roblox/: asset.rs  group.rs  id.rs  mod.rs  user.rs
models/src/rolang/: expression.rs  mod.rs  parser.rs  scanner.rs  token.rs
models/src/user/: flags.rs  mod.rs
models_new/: Cargo.toml
models_new/src/: blacklist.rs  lib.rs
models_new/src/bind/: asset.rs  custom.rs  group.rs  mod.rs  rank.rs  template.rs
models_new/src/guild/: mod.rs
models_new/src/roblox/: asset.rs
models_new/src/rolang/: expression.rs  mod.rs  parser.rs  scanner.rs  token.rs
models_new/src/user/: mod.rs
patreon/: Cargo.toml
patreon/src/: error.rs  lib.rs
redis/: Cargo.toml
redis/src/: lib.rs
roblox/: Cargo.toml
roblox/src/: error.rs  lib.rs  route.rs
roblox/src/models/: asset.rs  group.rs  id.rs  mod.rs  user.rs
rowifi/: Cargo.toml
rowifi/src/: main.rs
rowifi/src/commands/: help.rs  mod.rs  test.rs
rowifi/src/commands/analytics/: mod.rs  register.rs  view.rs
rowifi/src/commands/api/: mod.rs
rowifi/src/commands/assetbinds/: delete.rs  mod.rs  modify.rs  new.rs
rowifi/src/commands/backup/: mod.rs  new.rs  restore.rs
rowifi/src/commands/blacklists/: custom.rs  delete.rs  group.rs  mod.rs  name.rs
rowifi/src/commands/custombinds/: delete.rs  mod.rs  modify.rs  new.rs
rowifi/src/commands/events/: mod.rs  new.rs  reset.rs  summary.rs  types.rs  view.rs
rowifi/src/commands/group/: bind.rs  mod.rs  reset.rs  serverinfo.rs  setup.rs  update_mul.rs
rowifi/src/commands/groupbinds/: delete.rs  mod.rs  modify.rs  new.rs
rowifi/src/commands/premium/: admin.rs  mod.rs  patreon.rs  redeem.rs  transfer.rs
rowifi/src/commands/rankbinds/: create.rs  delete.rs  mod.rs  modify.rs  new.rs
rowifi/src/commands/settings/: admin.rs  bypass.rs  functional.rs  log.rs  misc.rs  mod.rs  nickname_bypass.rs  trainer.rs  update.rs  verify.rs
rowifi/src/commands/settings/admin/: add.rs  mod.rs  remove.rs
rowifi/src/commands/settings/bypass/: add.rs  mod.rs  remove.rs
rowifi/src/commands/settings/trainer/: add.rs  mod.rs  remove.rs
rowifi/src/commands/user/: info.rs  mod.rs  test.rs  update.rs  verify.rs
rowifi/src/commands/user/verify/: manage.rs  mod.rs
rowifi/src/services/: activity.rs  auto_detection.rs  event_handler.rs  mod.rs
rowifi/src/utils/: mod.rs  update_user.rs  update_user_new.rs
src/: main.rs
src/attributes/src/: lib.rs
src/cache/: event.rs  mod.rs
src/cache/models/: guild.rs  member.rs  mod.rs  role.rs
src/commands/: help.rs  mod.rs  test.rs
src/commands/analytics/: mod.rs  register.rs  view.rs
src/commands/assetbinds/: delete.rs  mod.rs  modify.rs  new.rs
src/commands/backup/: mod.rs  new.rs  restore.rs
src/commands/blacklists/: custom.rs  delete.rs  group.rs  mod.rs  name.rs
src/commands/custombinds/: delete.rs  mod.rs  modify.rs  new.rs
src/commands/events/: mod.rs  new.rs  types.rs  view.rs
src/commands/group/: mod.rs  serverinfo.rs  setup.rs  update_mul.rs
src/commands/groupbinds/: delete.rs  mod.rs  modify.rs  new.rs
src/commands/premium/: admin.rs  mod.rs  patreon.rs  redeem.rs  transfer.rs
src/commands/rankbinds/: delete.rs  mod.rs  modify.rs  new.rs
src/commands/settings/: misc.rs  mod.rs  update.rs  verify.rs
src/commands/user/: info.rs  mod.rs  update.rs  verify.rs
src/framework/: configuration.rs  context.rs  map.rs  mod.rs  parser.rs  prelude.rs  structures.rs  utils.rs
src/models/: analytics.rs  bind.rs  blacklist.rs  command.rs  configuration.rs  events.rs  guild.rs  mod.rs  stats.rs  user.rs
src/models/bind/: asset.rs  custom.rs  group.rs  mod.rs  rank.rs
src/models/guild/: backup.rs  mod.rs  settings.rs  types.rs
src/rolang/: expression.rs  mod.rs  parser.rs  scanner.rs  token.rs
src/services/: activity.rs  auto_detection.rs  event_handler.rs  mod.rs
src/utils/: database.rs  error.rs  logger.rs  misc.rs  mod.rs  pagination.rs  patreon.rs  roblox.rs
translations/ar/: common.json
translations/cs/: common.json
translations/da/: common.json
translations/de/: common.json
translations/el/: common.json
translations/es/: common.json
translations/fi/: common.json
translations/fr/: common.json
translations/it/: common.json
translations/ja/: common.json
translations/nl/: common.json
translations/no/: common.json
translations/pl/: common.json
translations/pt/: common.json
translations/ro/: common.json
translations/ru/: common.json
translations/sv/: common.json
translations/uk/: common.json
translations/zh/: common.json
