[workspace]
members = [
    "rowifi",
    "cache",
    "database",
    "framework",
    "framework/framework-derive",
    "models"
]

[profile.release]
lto = true

[patch.'https://github.com/Erk-/twilight']
twilight-model = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight" }
