[package]
name = "rowifi-cache"
version = "3.1.1"
authors = ["Gautam.A <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4"
rowifi-models = { path = "../models" }
tracing = "0"
