[package]
name = "rowifi-database"
version = "3.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0"
deadpool-postgres = { version = "0" }
itertools = "0"
rowifi-models =  { path = "../models" }
rustls = "0.20"
rustls-pemfile = "0"
tokio-postgres = { version = "0", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_8"] }
tokio-postgres-rustls = "0"
tracing = "0"
webpki-roots = "0.22"