[package]
name = "rowifi-database-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = { version = "0" }
rowifi-models-new =  { path = "../models_new" }
rustls = "0.20"
rustls-pemfile = "0"
tokio-postgres = { version = "0" }
tokio-postgres-rustls = "0"
tracing = "0"
webpki-roots = "0.22"