[package]
name = "rowifi-framework"
version = "3.0.2"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0"
chrono = { version = "0", default-features = false, features = ["std"] }
dashmap = "4"
framework-derive = { path = "./framework-derive" }
futures-util = "0"
itertools = "0"
patreon = { branch = "main", git = "https://github.com/AsianIntel/patreon" }
roblox = { path = "../roblox" }
rowifi-cache = { path = "../cache" }
rowifi-database = { path = '../database' }
rowifi-models = { path = "../models" }
tracing = "0"
tokio = { version = "1", features = ["time"] }
tokio-stream = { version = "0" }
tower = { version = "0", features = ["util"] }
transient-dashmap = { branch = "main", git = "https://github.com/AsianIntel/transient-dashmap" }
twilight-embed-builder = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-model = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-gateway = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features= ["zlib-stock", "rustls-webpki-roots"] }
twilight-http = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls-webpki-roots", "tracing"] }
twilight-standby = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-util = { branch = "main", git = "https://github.com/twilight-rs/twilight", features = ["link"] }
uwl = "0"