[package]
name = "rowifi-framework"
version = "3.2.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0", default-features = false, features = ["std"] }
dashmap = "4"
framework-derive = { path = "./framework-derive" }
futures-util = "0"
itertools = "0"
patreon = { path = "../patreon" }
roblox = { path = "../roblox" }
rowifi-cache = { path = "../cache" }
rowifi-database = { path = '../database' }
rowifi-models = { path = "../models" }
tracing = "0"
tokio = { version = "1", features = ["time"] }
tokio-stream = { version = "0" }
tower = { version = "0", features = ["util"] }
transient-dashmap = { branch = "main", git = "https://github.com/AsianIntel/transient-dashmap" }
twilight-embed-builder = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-gateway = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features= ["zlib-stock", "rustls-webpki-roots"] }
twilight-http = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls-webpki-roots", "tracing"] }
twilight-standby = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-util = { branch = "main", git = "https://github.com/twilight-rs/twilight", features = ["link"] }
twilight-validate = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
uwl = "0"