[package]
name = "framework_new"
version = "0.1.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
dashmap = "4"
framework-derive = { path = "./framework-derive" }
futures = "0"
itertools = "0"
patreon = { branch = "main", git = "https://github.com/AsianIntel/patreon" }
roblox = { branch = "main", git = "https://github.com/AsianIntel/roblox" }
rowifi-cache = { path = "../cache" }
rowifi-database = { path = '../database' }
rowifi-models = { path = "../models" }
tokio = { version = "1", features = ["time"] }
tokio-stream = { version = "0" }
tower = { version = "0", features = ["util", "limit"] }
twilight-command-parser = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
twilight-embed-builder = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
twilight-model = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
twilight-gateway = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
twilight-http = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
twilight-standby = { branch = "feature/slash", git = "https://github.com/Erk-/twilight" }
uwl = "0"