[package]
name = "rowifi-models"
version = "3.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
bytes = "1"
lazy_static = "1"
postgres-types = { version = "0", features = ["derive"] }
prometheus = "0"
regex = "1"
serde = "1"
tokio-postgres = { version = "0" }
twilight-model = { branch = "main", git = "https://github.com/twilight-rs/twilight" }