[package]
name = "rowifi-models"
version = "3.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
bytes = "1"
chrono = { version = "0", features = ["serde"] }
lazy_static = "1"
postgres-types = { version = "0", features = ["derive", "with-serde_json-1", "with-chrono-0_4"] }
prometheus = "0"
regex = "1"
serde = "1"
serde_repr = "0"
tokio-postgres = { version = "0", features = ["with-serde_json-1", "with-chrono-0_4"] }
twilight-model = { branch = "main", git = "https://github.com/twilight-rs/twilight" }