[package]
name = "rowifi-models-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
lazy_static = "1"
postgres-types = { version = "0", features = ["derive"] }
regex = "1"
tokio-postgres = { version = "0" }