[package]
name = "rowifi-redis"
version = "3.0.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
deadpool = { branch = "master", git = "https://github.com/bikeshedder/deadpool", default-features = false, features = ["managed"]  }
redis = { branch = "master", git = "https://github.com/mitsuhiko/redis-rs", default-features = false, features = ["tokio-comp", "connection-manager"] }