[package]
name = "roblox"
version = "0.1.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["client", "http2", "runtime"] }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
rowifi-models = { path = "../models" }
rowifi-redis = { path = "../redis"}
serde = { version = "1", default-features = false, features = ["derive"] }
serde_cbor = "0"
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }