[package]
name = "rowifi"
version = "3.0.0"
authors = ["Gautam.A <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# RoWifi Crates
roblox = { path = "../roblox" }
rowifi-cache = { path = "../cache" }
rowifi-database = { path = '../database' }
rowifi-framework = { path = '../framework' }
rowifi-models = { path = "../models" }
rowifi-redis = { path = "../redis" }

# Main Crates
dashmap = "4"
hyper = { version = "0", features = ["server", "client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0"
tower = "0"
tracing = "0"
tracing-subscriber = "0"

# Command Utilities
base64 = "0.13"
chacha20poly1305 = "0"
chrono = { version = "0", default-features = false, features = ["std"] }
image = { version = "0.23", default-features = false, features = ["png"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "datetime", "line_series"] }
rand = "0.8"
regex = "1"
sha2 = "0"

# Twilight Modules
twilight-embed-builder = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight" }
twilight-gateway = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight", default-features = false, features= ["stock-zlib", "rustls-webpki-roots"] }
twilight-http = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight", default-features = false, features = ["rustls-webpki-roots"] }
twilight-mention = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight" } # TODO: Remove this
twilight-model = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight" }
twilight-standby = { branch = "feature/slash", git = "https://github.com/AsianIntel/twilight" }

# Utilities Crates
dotenv = "0"
futures-util = "0"
itertools = "0"
lazy_static = "1"
mongodb = { branch = "master", git = "https://github.com/mongodb/mongo-rust-driver" }
patreon = { branch = "main", git = "https://github.com/AsianIntel/patreon" }
prometheus = "0"
