[package]
name = "rowifi"
version = "3.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# RoWifi Crates
roblox = { path = "../roblox" }
rowifi-cache = { path = "../cache" }
rowifi-database = { path = '../database' }
rowifi-framework = { path = '../framework' }
rowifi-models = { path = "../models" }

# Main Crates
dashmap = "4"
hyper = { version = "0", features = ["server", "client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0"
tower = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

# Command Utilities
base64 = "0.13"
chrono = { version = "0", features = ["serde"] }
image = { version = "0.23", default-features = false, features = ["png"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "datetime", "line_series"] }
rand = "0.8"
regex = "1"
sha2 = "0"

# Twilight Modules
twilight-gateway = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features= ["zlib-stock", "rustls-webpki-roots", "tracing"] }
twilight-http = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls-webpki-roots", "tracing"] }
twilight-standby = { branch = "main", git = "https://github.com/twilight-rs/twilight" }

# Utilities Crates
dotenv = "0"
deadpool-redis = "0"
futures-util = "0"
itertools = "0"
lazy_static = "1"
patreon = { path = "../patreon" }
prometheus = "0"
redis = { version = "0", default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
