[package]
name = "framework-derive"
version = "1.1.0"
authors = ["AsianIntel <gautam.abhyankar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0"
syn = { version = "1", features = ["full"] }
quote = "1"